--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>BGA</title>
-
-  <link href="./static/img/favicon.ico" rel="icon" type="image/x-icon"/>
-  <link href="./static/img/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-  <link href="./static/img/favicon.ico" rel="bookmark" type="image/x-icon"/>
-</head>
-<body>
-<div id="app"></div>
-<!-- built files will be auto injected -->
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>BGA</title><link href=./static/img/favicon.ico rel=icon type=image/x-icon><link href=./static/img/favicon.ico rel="shortcut icon" type=image/x-icon><link href=./static/img/favicon.ico rel=bookmark type=image/x-icon><link href=./static/css/app.ca9bbfd7b34bd0a25aea074091849bae.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.c4d2789fd33e6dcdf62b.js></script><script type=text/javascript src=./static/js/vendor.ab67defd4ae209498264.js></script><script type=text/javascript src=./static/js/app.f2c9b07f0b50f4fc000d.js></script></body></html>
